# Museum_Mapping

./: README.md  data.json  manage.py  pyproject.toml
markers/: admin.py  models.py  urls.py  views.py
markers/migrations/: 0001_initial.py  0002_auto_20240820_0827.py
markers/static/: map.css  map.js
markers/templates/: index.html  map.html
mymap/: settings.py  urls.py
