[tool.poetry]
name = "map"
version = "0.1.0"
description = ""
authors = ["samikshakhadka <swabhimankhadka2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg = "^3.2.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
